changed packaging to war.
changed from local transaction type to jta.
now uses the wildfly datasource.
added beans.xml

--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -5,10 +5,12 @@
 	<groupId>at.fhj.swd13</groupId>
 	<artifactId>pse</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<name>TODO</name>
 
 	<description>TODO</description>
+
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
