--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -124,6 +124,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
