--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -128,6 +128,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>5.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
