--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -121,6 +121,16 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 
 		<!-- test dependencies -->
 		<dependency>
