--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>jboss-jsf-api_2.2_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.spec.javax.el</groupId>
+			<artifactId>jboss-el-api_2.2_spec</artifactId>
+			<version>1.0.5.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.spec.javax.json</groupId>
