--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -148,6 +148,11 @@
 			<artifactId>primefaces</artifactId>
 			<version>5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
