Completed story document library

--- a/pse-dbmodell/src/main/resources/at/fhj/swd13/Resources.properties
+++ b/pse-dbmodell/src/main/resources/at/fhj/swd13/Resources.properties
@@ -1,1 +1,3 @@
-UnknownErrorMessage=Tut uns leid, aber Etwas ist schiefgelaufen, bitte wenden Sie sich an den Support.
+UnknownErrorMessage=Tut uns leid, aber etwas ist schiefgelaufen, bitte wenden Sie sich an den Support.
+DocumentLibraryEntryNotFound=Das Dokument mit der Id %s existiert nicht mehr.
+DeletedDocumentEntrySuccessfully=Das Dokument wurde gelöscht.
