--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -28,7 +28,6 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		
-		<sonar.host.url>https://jenkins.salzinger.at</sonar.host.url>
 	</properties>
 
 	<dependencyManagement>
@@ -153,12 +152,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.7.Final</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.3.Final</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.mail</groupId>
