--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -14,7 +14,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
 		<!-- JBoss dependency versions -->
 		<version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
 
@@ -25,7 +26,10 @@
 		<version.war.plugin>2.6</version.war.plugin>
 
 		<version.selenium>2.48.2</version.selenium>
-
+		
+		<!-- maven-plugins -->
+		<version.surefire.plugin>2.19</version.surefire.plugin>
+		<version.failsafe.plugin>2.19</version.failsafe.plugin>
 		<!-- maven-compiler-plugin -->
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -225,6 +229,29 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.4.201502262128</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${version.surefire.plugin}</version>
+<!-- 				<configuration> -->
+<!-- 					<excludes> -->
+<!-- 						<exclude>Db*</exclude> -->
+<!-- 					</excludes> -->
+<!-- 				</configuration> -->
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${version.failsafe.plugin}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -236,7 +263,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.19</version>
+						<version>${version.surefire.plugin}</version>
 						<configuration>
 							<properties>
 								<property>
