--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -15,7 +15,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<!-- JBoss dependency versions -->
 		<version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
 
@@ -26,10 +26,11 @@
 		<version.war.plugin>2.6</version.war.plugin>
 
 		<version.selenium>2.48.2</version.selenium>
-		
+
 		<!-- maven-plugins -->
 		<version.surefire.plugin>2.19</version.surefire.plugin>
 		<version.failsafe.plugin>2.19</version.failsafe.plugin>
+		<version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
 		<!-- maven-compiler-plugin -->
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -233,11 +234,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${version.surefire.plugin}</version>
-<!-- 				<configuration> -->
-<!-- 					<excludes> -->
-<!-- 						<exclude>Db*</exclude> -->
-<!-- 					</excludes> -->
-<!-- 				</configuration> -->
+				<!-- <configuration> -->
+				<!-- <excludes> -->
+				<!-- <exclude>Db*</exclude> -->
+				<!-- </excludes> -->
+				<!-- </configuration> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -284,6 +285,40 @@
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
+		</profile>
+		<profile>
+			<id>ci</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.wildfly.plugins</groupId>
+						<artifactId>wildfly-maven-plugin</artifactId>
+						<version>${version.wildfly.maven.plugin}</version>
+						<executions>
+
+							<!-- Run wildfly and deploy application for integration tests. -->
+							<execution>
+								<id>wildfly-run</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+
+							<!-- Integration test teardown. -->
+							<execution>
+								<id>wildfly-shutdown</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>undeploy</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+
+			</build>
+
 		</profile>
 	</profiles>
 </project>
