--- a/pse-dbmodell/pom.xml
+++ b/pse-dbmodell/pom.xml
@@ -182,12 +182,12 @@
 			<version>2.0.1.Final</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
 			<version>3.1.4.GA</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling</artifactId>
@@ -212,7 +212,7 @@
 			<version>1.0.4.Final</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>org.jboss.spec.javax.transaction</groupId>
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.0.0.Final</version>
@@ -223,7 +223,7 @@
 			<artifactId>jboss-ejb-api_3.2_spec</artifactId>
 			<version>1.0.0.Final</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.jboss.xnio</groupId>
 			<artifactId>xnio-api</artifactId>
