--- a/pse-dbmodell/.project
+++ b/pse-dbmodell/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pse-dbmodell</name>
+	<name>pse</name>
 	<comment></comment>
 	<projects>
 	</projects>
