--- a/pse/pom.xml
+++ b/pse/pom.xml
@@ -170,9 +170,14 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.5.4</version>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.5.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>1.5.4</version>
 		</dependency>
 		<dependency>
 			<groupId>xml-apis</groupId>
@@ -240,7 +245,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+	        <groupId>com.icegreen</groupId>
+	        <artifactId>greenmail</artifactId>
+	        <version>1.3</version>
+	        <scope>test</scope>
+	    </dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-api</artifactId>
